Essas são as alterações feitas na posição das classes , ainda vou ver se organizo melhor o app e crio os métodos restantes

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -50,7 +50,7 @@
 
                     <div class="nav__link collapse">
                         <ion-icon name="people-outline" class="nav__icon"></ion-icon>
-                        <a href="{{ url_for('pessoas') }}" class="nav__name">Pessoas</a>
+                        <a href="{{ url_for('cadastrar_pessoas') }}" class="nav__name">Pessoas</a>
 
                         <ion-icon name="chevron-down-outline" class="collapse__link"></ion-icon>
 
