--- a/templates/pessoas.html
+++ b/templates/pessoas.html
@@ -16,7 +16,7 @@
 
     <div class="formulario-departamento">
         <h2>Cadastrar Pessoa</h2>
-        <form method="POST" action="{{ url_for('pessoas') }}">
+        <form method="POST" action="{{ url_for('cadastrar_pessoas') }}">
             <div class="form-group">
                 <label for="nome_pessoa">Nome da Pessoa</label>
                 <input type="text" class="form-control" name="nome_pessoa" required>
