--- a/templates/empresaparceira.html
+++ b/templates/empresaparceira.html
@@ -3,7 +3,38 @@
 {% block title %}Empresas Parceiras{% endblock %}
 
 {% block content %}
-<div> 
+<div class="empresa-parecira"> 
+    <div class="formulario-serviço4">
+        <h3>Adicionar Empresa Parceira</h3>
+        <form method="POST">
+            <div class="form-group">
+                <label for="nome_parceira">Nome da Empresa Parceira</label>
+                <input type="text" class="form-control" name="nome_parceira" required>
+            </div>
+            <div class="form-group">
+                <label for="funcionario_parceira">Cadastrar Funcionário</label>
+                <input type="text" class="form-control" name="funcionario_parceira" required>
+            </div>
+            <div class="form-group">
+                <label for="email_parceira">Cadastrar email</label>
+                <input type="text" class="form-control" name="email_parceira" required>
+            </div>
+            <div class="form-group">
+                <label for="email_parceira">Custo</label>
+                <input type="number" class="form-control" name="custo_parceira" required>
+            </div>        
+            <div class="form-group">
+                <label for="email_parceira">Cadastrar Produto(s) Fornecido(s)</label>
+                <input type="text" class="form-control" name="produto_parceira" required>
+            </div>
+            <div class="form-group">
+                <label for="email_parceira">Cadastrar email</label>
+                <input type="text" class="form-control" name="email_parceira" required>
+            </div>                
+            <button type="submit" class="btn btn-primary">Adicionar</button>
+            
+        </form>
+    </div>
     <div class="tabela-fun">
         <h2>Empresas Parceiras</h2>
     
@@ -37,61 +68,27 @@
             </tbody>
         </table>
     </div>
-    
-    <script>
-        // Função para filtrar a tabela com base no input de pesquisa
-        document.getElementById('pesquisa-parceira').addEventListener('keyup', function() {
-            const termo = this.value.toLowerCase();
-            const linhas = document.querySelectorAll('#parceiraList tr');
-            
-            // Se o campo de pesquisa estiver vazio, mostra todas as linhas
-            if (termo === "") {
-                linhas.forEach(linha => {
-                    linha.style.display = '';
-                });
-            } else {
-                // Caso contrário, filtra as linhas com base no termo digitado
-                linhas.forEach(linha => {
-                    const textoLinha = linha.textContent.toLowerCase();
-                    linha.style.display = textoLinha.includes(termo) ? '' : 'none';
-                });
-            }
-        });
-    </script>
-
- </div>
-
-<div class="formulario-departamento">
-    <h3>Adicionar Empresa Parceira</h3>
-    <form method="POST">
-        <div class="form-group">
-            <label for="nome_parceira">Nome da Empresa Parceira</label>
-            <input type="text" class="form-control" name="nome_parceira" required>
-        </div>
-        <div class="form-group">
-            <label for="funcionario_parceira">Cadastrar Funcionário</label>
-            <input type="text" class="form-control" name="funcionario_parceira" required>
-        </div>
-        <div class="form-group">
-            <label for="email_parceira">Cadastrar email</label>
-            <input type="text" class="form-control" name="email_parceira" required>
-        </div>
-        <div class="form-group">
-            <label for="email_parceira">Custo</label>
-            <input type="number" class="form-control" name="custo_parceira" required>
-        </div>        
-        <div class="form-group">
-            <label for="email_parceira">Cadastrar Produto(s) Fornecido(s)</label>
-            <input type="text" class="form-control" name="produto_parceira" required>
-        </div>
-        <div class="form-group">
-            <label for="email_parceira">Cadastrar email</label>
-            <input type="text" class="form-control" name="email_parceira" required>
-        </div>                
-        <button type="submit" class="btn btn-primary">Adicionar</button>
-        
-    </form>
 </div>
 
+<script>
+    // Função para filtrar a tabela com base no input de pesquisa
+    document.getElementById('pesquisa-parceira').addEventListener('keyup', function() {
+        const termo = this.value.toLowerCase();
+        const linhas = document.querySelectorAll('#parceiraList tr');
+        
+        // Se o campo de pesquisa estiver vazio, mostra todas as linhas
+        if (termo === "") {
+            linhas.forEach(linha => {
+                linha.style.display = '';
+            });
+        } else {
+            // Caso contrário, filtra as linhas com base no termo digitado
+            linhas.forEach(linha => {
+                const textoLinha = linha.textContent.toLowerCase();
+                linha.style.display = textoLinha.includes(termo) ? '' : 'none';
+            });
+        }
+    });
+</script>
 
 {% endblock %}
