--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
 
         <div class="card3">
             <p><strong>Contratos Feitos</strong></p>
-            <h2 class="number-dash">{{ numero_contratos }}</h2>  <!-- Exibe o total de contratos -->
+            <h2 class="number-dash">{{ numero_contratos }}</h2>  
         </div>
     </div>
 
