--- a/templates/pessoas.html
+++ b/templates/pessoas.html
@@ -14,7 +14,7 @@
         {% endwith %}
     </script>
 
-    <div class="formulario-departamento">
+    <div class="formulario-serviço2">
         <h2>Cadastrar Pessoa</h2>
         <form method="POST" action="{{ url_for('cadastrar_pessoas') }}">
             <div class="form-group">
