--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1,60 +1,55 @@
-{% extends 'base.html' %}
-
-{% block title %}Adicionar Funcionário{% endblock %}
-
-{% block content %}
-<div  class="cadastro-container">
-    <div class="form-cadastro">
-        <h2>Cadastrar Funcionário</h2>
-        <form action="/add_funcionario" method="POST">
-            <label for="cpf">CPF:</label>
-            <input type="text" name="cpf" required><br>
-            <label for="cargo">Cargo:</label>
-            <input type="text" name="cargo" required><br>
-            <label for="salario">Salário:</label>
-            <input type="number" step="0.01" name="salario" required><br>
-            <label for="ocupacao">Ocupação:</label>
-            <input type="text" name="ocupacao" required><br>
-            <label for="modelo_de_trabalho">Modelo de Trabalho:</label>
-            <input type="text" name="modelo_de_trabalho" required><br>
-            <button type="submit">Cadastrar</button>
-        </form>
-    </div>
-    
-    <div class="tabela">
-        <h2>Funcionários Cadastrados</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>CPF</th>
-                    <th>Cargo</th>
-                    <th>Salário</th>
-                    <th>Ocupação</th>
-                    <th>Modelo de Trabalho</th>
-                    <th>Ações</th> 
-                </tr>
-            </thead>
-            <tbody>
-                {% for funcionario in funcionarios %}
-                    <tr>
-                        <td>{{ funcionario.cpf }}</td>
-                        <td>{{ funcionario.cargo }}</td>
-                        <td>{{ funcionario.salario }}</td>
-                        <td>{{ funcionario.ocupacao }}</td>
-                        <td>{{ funcionario.modelo_de_trabalho }}</td>
-                        <td>
-                            <form action="{{ url_for('delete_funcionario', id=funcionario.id) }}" method="POST" style="display:inline;">
-                                <button type="submit" class="exluir" onclick="return confirm('Tem certeza que deseja excluir?');">Excluir</button>
-                            </form>
-                        </td>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td colspan="6">Nenhum funcionário cadastrado.</td>
-                    </tr>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <title>Home</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body class="body-home">
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div class="flash-messages">
+                {% for message in messages %}
+                    <div class="flash-message">{{ message }}</div>
                 {% endfor %}
-            </tbody>
-        </table>
+            </div>
+        {% endif %}
+    {% endwith %}
+    <div class="maincontainer">
+        <div class="lottie-container">
+            <img src="static\datasheprer.svg " class="layoutimg" alt="Logo">
+        </div>
+ 
+        <div class="container_login" id="login-form">
+            <div class="login-box">
+                <img class="logo" src="static/datasphere.svg" alt="">
+                <h3>Faça o Cadastro</h3>
+                <form action="/cadastro" method="post">
+                    <div class="input-group">
+                        <label for="email_cadastro">E-mail</label>
+                        <input type="email" id="email_cadastro" name="email_cadastro" required placeholder="Digite seu e-mail">
+                    </div>
+                    <div class="input-group">
+                        <label for="password">Senha</label>
+                        <input type="password" id="password" name="password" required placeholder="Digite sua senha">
+                    </div>
+
+                    <div class="input-group">
+                        <label for="password">Comfirme sua Senha</label>
+                        <input type="password" id="password" name="password" required placeholder="Digite novamente sua senha">
+                    </div>
+                    <button type="submit" class="login-button">Entrar</button>
+                    <a href="{{ url_for('index') }}" class="cadastro"> Já tem uma conta? Faça Login</a>
+                </form>
+            </div>
+        </div>
     </div>
-</div>
-{% endblock %}
+
+        <footer>
+            <p>DataSphere - Todos os direitos reservados &copy; 2024</p>
+        </footer>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+</body>
+</html>
