--- a/templates/empresacliente.html
+++ b/templates/empresacliente.html
@@ -3,7 +3,31 @@
 {% block title %}Empresas Clientes{% endblock %}
 
 {% block content %}
-<div> 
+ <div class="empresa-parecira"> 
+    <div class="formulario-serviço3">
+        <h3>Adicionar Empresa Cliente</h3>
+        <form method="POST">
+            <div class="form-group">
+                <label for="nome_cliente">Nome da Empresa Cliente</label>
+                <input type="text" class="form-control" name="nome_cliente" required>
+            </div>
+            <div class="form-group">
+                <label for="cpf_cliente">Cadastrar CPF</label>
+                <input type="number" class="form-control" name="cpf_cliente" required>
+            </div>
+            <div class="form-group">
+                <label for="funcionario_cliente">Cadastrar Funcionário</label>
+                <input type="text" class="form-control" name="funcionario_cliente" required>
+            </div>
+            <div class="form-group">
+                <label for="email_cliente">Cadastrar email</label>
+                <input type="text" class="form-control" name="email_cliente" required>
+            </div>
+            
+            <button type="submit" class="btn btn-primary">Adicionar</button>
+            
+        </form>
+    </div>
     <div class="tabela-fun">
         <h2>Empresas Clientes</h2>
     
@@ -37,54 +61,28 @@
             </tbody>
         </table>
     </div>
-    
-    <script>
-        // Função para filtrar a tabela com base no input de pesquisa
-        document.getElementById('pesquisa-cliente').addEventListener('keyup', function() {
-            const termo = this.value.toLowerCase();
-            const linhas = document.querySelectorAll('#clienteList tr');
-            
-            // Se o campo de pesquisa estiver vazio, mostra todas as linhas
-            if (termo === "") {
-                linhas.forEach(linha => {
-                    linha.style.display = '';
-                });
-            } else {
-                // Caso contrário, filtra as linhas com base no termo digitado
-                linhas.forEach(linha => {
-                    const textoLinha = linha.textContent.toLowerCase();
-                    linha.style.display = textoLinha.includes(termo) ? '' : 'none';
-                });
-            }
-        });
-    </script>
-
  </div>
 
-<div class="formulario-departamento">
-    <h3>Adicionar Empresa Cliente</h3>
-    <form method="POST">
-        <div class="form-group">
-            <label for="nome_cliente">Nome da Empresa Cliente</label>
-            <input type="text" class="form-control" name="nome_cliente" required>
-        </div>
-        <div class="form-group">
-            <label for="cpf_cliente">Cadastrar CPF</label>
-            <input type="number" class="form-control" name="cpf_cliente" required>
-        </div>
-        <div class="form-group">
-            <label for="funcionario_cliente">Cadastrar Funcionário</label>
-            <input type="text" class="form-control" name="funcionario_cliente" required>
-        </div>
-        <div class="form-group">
-            <label for="email_cliente">Cadastrar email</label>
-            <input type="text" class="form-control" name="email_cliente" required>
-        </div>
+ <script>
+    // Função para filtrar a tabela com base no input de pesquisa
+    document.getElementById('pesquisa-cliente').addEventListener('keyup', function() {
+        const termo = this.value.toLowerCase();
+        const linhas = document.querySelectorAll('#clienteList tr');
         
-        <button type="submit" class="btn btn-primary">Adicionar</button>
-        
-    </form>
-</div>
+        // Se o campo de pesquisa estiver vazio, mostra todas as linhas
+        if (termo === "") {
+            linhas.forEach(linha => {
+                linha.style.display = '';
+            });
+        } else {
+            // Caso contrário, filtra as linhas com base no termo digitado
+            linhas.forEach(linha => {
+                const textoLinha = linha.textContent.toLowerCase();
+                linha.style.display = textoLinha.includes(termo) ? '' : 'none';
+            });
+        }
+    });
+</script>
 
 
 {% endblock %}
